--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
     "expo-linear-gradient": "~8.4.0",
     "expo-screen-orientation": "~2.1.0",
+    "expo-sqlite": "^9.0.0",
+    "expo-sqlite-query-helper": "^1.1.4",
     "expo-status-bar": "~1.0.3",
     "native-base": "^2.15.0",
     "react": "16.13.1",
@@ -27,7 +30,10 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.1",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.3"
+    "react-navigation": "^4.4.3",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
