--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
@@ -17,7 +18,6 @@
     "expo-font": "~8.4.0",
     "expo-linear-gradient": "~8.4.0",
     "expo-screen-orientation": "~2.1.0",
-    "expo-sqlite": "^9.0.0",
     "expo-sqlite-query-helper": "^1.1.4",
     "expo-status-bar": "~1.0.3",
     "native-base": "^2.15.0",
