--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/react-native-responsive-image": "^2.0.0",
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
+    "base64-js": "^1.5.1",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
+    "expo-camera": "~9.1.0",
+    "expo-file-system": "~9.3.0",
     "expo-font": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
     "expo-linear-gradient": "~8.4.0",
+    "expo-media-library": "~10.0.0",
+    "expo-permissions": "~10.0.0",
     "expo-screen-orientation": "~2.1.0",
     "expo-sqlite-query-helper": "^1.1.4",
     "expo-status-bar": "~1.0.3",
@@ -25,6 +32,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dropdown-picker": "^4.0.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
@@ -33,7 +41,8 @@
     "react-navigation": "^4.4.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "shorthash": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
