--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "scapa-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/new-icon.png",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "image": "./assets/new-splash-screen.png",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "updates": {
@@ -21,13 +21,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/new-icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.nico194.scapamobile"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/new-icon.png"
     },
     "description": ""
   }
