--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
   "expo": {
     "name": "scapa-mobile",
-    "slug": "scapa-mobile",
+    "slug": "SCAPA",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/new-icon.png",
+    "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/new-splash-screen.png",
+      "image": "./assets/splash-screen.png",
       "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
@@ -21,13 +21,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/new-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.nico194.scapamobile"
     },
     "web": {
-      "favicon": "./assets/new-icon.png"
+      "favicon": "./assets/icon.png"
     },
     "description": ""
   }
